Name:           sr-utils
Version:        1.99
License:        BSD3
License-File:   COPYING
Author:         David Fox
Category:       Unclassified
Synopsis:       Module limbo
Description:
  A hodge-podge of functions, modules, and instances.  These
  generally end up here because
     1. they are needed in two unrelated packages,
     2. they belong in some upstream module,
     3. they can't be moved to an upstream module because
        they would add dependencies, or
     4. they are deprecated but still in use
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       https://github.com/seereason/sr-utils
Build-Type:     Simple
Cabal-Version:  >= 1.10
Tested-With: GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.4, GHC==8.10.2

flag network-uri
  Description: Get Network.URI from the network-uri package rather than the
   full network package.
  Default: True

flag omit-serialize
  Description: Omit all the Serialize instances, on the assumption
   that we will use SafeCopy instances instead.
  Default: False

Library
  default-language: Haskell2010
  GHC-Options: -Wall -Wredundant-constraints
  HS-Source-Dirs: src
  Build-Depends:
    base >= 4.9 && < 5,
    base64-bytestring,
    bytestring,
    cereal,
    containers,
    Diff,
    directory,
    exceptions,
    fgl,
    filemanip,
    filepath,
    generic-data,
    generic-lens,
    hslogger,
    HUnit,
    lens,
    ListLike,
    mmorph,
    mtl,
    pretty,
    process,
    QuickCheck,
    safecopy,
    syb,
    template-haskell,
    text,
    th-lift,
    th-lift-instances,
    th-orphans,
    time,
    unexceptionalio-trans,
    unix,
    userid,
    uuid,
    uuid-orphans
  C-Sources:         cbits/gwinsz.c
  Include-Dirs:        cbits
  Install-Includes:    gwinsz.h
  Default-Extensions: ConstraintKinds, CPP, DataKinds, DeriveDataTypeable, DeriveFunctor, DeriveGeneric
  Default-Extensions: FlexibleInstances, FlexibleContexts, MultiParamTypeClasses, RankNTypes
  Default-Extensions: ScopedTypeVariables, StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies
  Exposed-modules:
    Extra.Debug
    Extra.Except
    Extra.Everywhere
    Extra.GenericMap
    Extra.Generics
    Extra.HughesPJ
    Extra.IO
    Extra.Lens
    Extra.LocalStorageEncode
    Extra.Monad.Supply
    Extra.Orphans
    Extra.Orphans2
    Extra.QuickCheck
    Extra.Serialize
    Extra.SSH
    Extra.Terminal
    Extra.Text
    Extra.Time
    Extra.URI
  if !impl(ghcjs)
    Exposed-modules:
      Extra.THIO
    Build-Depends:
      regex-tdfa

  if flag(network-uri)
    Build-Depends: network-uri >= 2.6
  else
    Build-Depends: network >= 2.4
